--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -5,7 +5,7 @@
   font-family: "Lato", Arial, sans-serif;
   overflow: auto;
   background-color: #F8F9FA;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 ::-webkit-scrollbar-track {
