--- a/frontend/src/styles/utils.css
+++ b/frontend/src/styles/utils.css
@@ -98,7 +98,7 @@ input:focus {
 }
 
 .partition-container {
-    min-height: 90.8vh;
+    min-height: 92%;
     display: flex;
     flex-direction: row;
 }
